# RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  ragspec.md  render.yaml
.github/workflows/: ci.yml
app/: config.py  factory.py  models.py
app/agents/: crag.py  graph.py  router.py  self_rag.py  state.py
app/api/: main.py
app/graph/: communities.py  cypher.py  enrich.py  extractor.py
app/indexing/: embeddings.py  graph_store.py  vector_store.py
app/ingestion/: arxiv_loader.py  chunker.py  loaders.py  multimodal.py  parser.py
app/llm/: providers.py
app/retrieval/: compress.py  graph_search.py  hybrid.py  rerank.py  transforms.py
cli/: lexgraph.py  papergraph.py
data/seed/: .gitkeep
eval/: golden_set.jsonl  run_ragas.py
tests/unit/: test_chunker.py  test_config.py  test_cypher.py  test_enrich.py  test_graph_smoke.py  test_hybrid.py  test_models.py  test_self_rag.py
