[project]
name = "lexgraph-rag"
version = "0.1.0"
description = "Advanced Legal Case Law & Patent Intelligence System"
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Graph DB
    "neo4j>=5.26.0",
    # LLM providers
    "openai>=1.54.0",
    "google-generativeai>=0.8.0",
    "cohere>=5.11.0",
    "tavily-python>=0.5.0",
    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # CLI
    "typer>=0.13.0",
    # Document parsing
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "lxml>=5.3.0",
    "tiktoken>=0.8.0",
    # Eval
    "ragas>=0.2.0",
    "datasets>=3.1.0",
]

[project.scripts]
lexgraph = "cli.lexgraph:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast deterministic tests (no external services)",
    "eval: RAGAS evaluation tests (require API keys, run nightly)",
    "integration: tests requiring live Qdrant/Neo4j",
]
addopts = "-m unit"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B"]
ignore = ["S101"]
